Fix classloader issue due to BasicURLClassPath filenames:
Now using following which should be rock solid:

try {
	jars[j] = new URL(new File(dir, name).getCanonicalFile().getAbsoluteFile().toURI().toURL().toExternalForm());
} catch (IOException e) {
	jars[j] = new URL(new File(dir, name).getAbsoluteFile().toURI().toURL().toExternalForm());
}



git-svn-id: https://svn.apache.org/repos/asf/openejb/trunk/openejb@1239091 13f79535-47bb-0310-9956-ffa450edef68